[package]
name = "bevy_oozlum"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92.0" # keep in sync with bevy
description = "Write reversible systems, commands and schedules in bevy"
repository = "https://github.com/urben1680/bevy_oozlum"
readme = "README.md"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]

exclude = [
  "logo_white_outline.png"
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dep"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
  "--html-after-content",
  "docs-rs/trait-tags.html",
]
features = ["app", "reflect", "hotpatching", "track-update-logs"] # all but ci_mode

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }

[dependencies]
bevy_app = { version = "=0.18", optional = true, default-features = false }
bevy_ecs = { version = "=0.18", default-features = false }
bevy_log = { version = "=0.18", default-features = false }
bevy_platform = { version = "=0.18", default-features = false }
bevy_ptr = { version = "=0.18", default-features = false } 
bevy_reflect = { version = "=0.18", optional = true, default-features = false }
bevy_utils = { version = "=0.18", default-features = false }
nonmax = { version = "0.5", default-features = false } # keep in sync with bevy
variadics_please = "1.1" # keep in sync with bevy

[dev-dependencies]
bevy = { version = "=0.18", features = ["track_location", "debug"] }

[[example]]
name = "game"
doc-scrape-examples = true

[features]
default = ["app", "reflect"]
app = ["dep:bevy_app"]
reflect = ["dep:bevy_reflect"]
track_update_logs = []
hotpatching = ["bevy_ecs/hotpatching"]
ci_mode = []
